# bedrock-viz

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  README.md  mcpe_viz.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docker.yml  pipeline.yml
data/: bedrock_viz.cfg  bedrock_viz.xml  mcpe_viz.cfg  mcpe_viz.xml
docs/: BUILD.md  RELEASE.md  USAGE.md
gui/: .gitignore  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcpe_viz_helper.pro
include/: config.h.in  control.h  data_loader.h  define.h  global.h  nbt.h
include/minecraft/: schematic.h
include/minecraft/v2/: base.h  biome.h  block.h  enchantment.h  entity.h  item.h
include/world/: check_spawn.h  chunk_data.h  common.h  dimension_data.h  misc.h  point_conversion.h
include/xml/: load_enchantment.h  load_entity.h  load_item.h  loader.h
patches/: leveldb-1.22.patch  libnbtplusplus-2.5.patch  pugixml-1.14.patch  pugixml-disable-install.patch
scripts/: release_osx.sh  release_unix_sources.sh
src/: args.cc  args.h  asset.cc  asset.h  config.h.in  control.cc  control.h  data_loader.cc  define.h  example_test.cc  global.cc  global.h  logger.cc  logger.h  main.cc  mcpe_viz.h  minecraft.cc  minecraft.h  nbt.cc  nbt.h  util.cc  util.h  version.h  xml.cc  xml.h
src/getopt/: getopt.c  getopt.h
src/minecraft/: biome_info.cc  biome_info.h  block_info.cc  block_info.h  conversion.cc  conversion.h  enchantment_info.cc  enchantment_info.h  entity_info.cc  entity_info.h  item_info.cc  item_info.h  schematic.cc  schematic.h
src/minecraft/v2/: base.cc  base.h  biome.cc  biome.h  block.cc  block.h  enchantment.cc  enchantment.h  entity.cc  entity.h  item.cc  item.h
src/utils/: block_recorder.cc  block_recorder.h  fs.cc  fs.h  pointer_array.h  unknown_recorder.cc  unknown_recorder.h
src/world/: block_list.cc  block_list.h  check_spawn.cc  chunk_data.cc  chunk_data.h  common.cc  dimension_data.cc  dimension_data.h  misc.cc  misc.h  palettes.cc  palettes.h  point_conversion.cc  world.cc  world.h
src/xml/: load_biome.cc  load_biome.h  load_block.cc  load_block.h  load_enchantment.cc  load_entity.cc  load_item.cc  loader.cc
static/: bedrock_viz.css  bedrock_viz.html.template  bedrock_viz.js  bedrock_viz_legend.html  mcpe_viz.css  mcpe_viz.html.template  mcpe_viz.js
static/css/: bedrock_viz.css  layers-control.css  measure-control.css  options-control.css  sidebar-control.css  view-mode-control.css
static/js/: bedrock_viz.js  help-control.js  layers-control.js  measure-control.js  options-control.js  players-control.js  sidebar-config.js  sidebar-control.js  view-mode-control.js
tests/: example_test.cc  main.cc
tests/xml/: load_enchantment_test.cc  load_entity_test.cc  load_item_test.cc
utils/: README.md  legend.cc
